# rubric-grader-eval

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  compiled_rubric.json  pyproject.toml
docs/: sample_run.md
examples/compiled/: boolean_composite_compiled.json  clean_compiled.json  document_masquerade_compiled.json  two_rules.json
examples/documents/: doc_001.json  doc_002.json  doc_003.json  doc_004.json  doc_005.json
examples/pre-evaluated/: doc_001.json  doc_002.json  doc_003.json  doc_004.json  doc_005.json
examples/rubrics/: boolean_composite.csv  clean.csv  document_masquerade.csv
schema/: rule_schema.json
src/rubric_eval/: __init__.py  agent_evaluator.py  compiler.py  eval.py  evaluator.py  llm.py  models.py
src/rubric_eval/prompts/: agent_evaluator.md  compile_rubric.md  evaluate_chunk.md
tests/: test_compiler.py  test_evaluator.py  test_schema.py
